tests/passing/var_const.db
var const name = "Luke"!
name = "Lu"!